--- a/build.gradle
+++ b/build.gradle
@@ -53,8 +53,8 @@ Gem::Specification.new do |spec|
   spec.name          = "${project.name}"
   spec.version       = "${project.version}"
   spec.authors       = ["Naotoshi Seo"]
-  spec.summary       = %[A filter plugin for Embulk to filter out rows]
-  spec.description   = %[A filter plugin for Embulk to filter out rows.]
+  spec.summary       = %[A filter plugin for Embulk to filter out rows with conditions]
+  spec.description   = %[A filter plugin for Embulk to filter out rows with conditions.]
   spec.email         = ["sonots@gmail.com"]
   spec.licenses      = ["MIT"]
   spec.homepage      = "https://github.com/sonots/embulk-filter-row"
