--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ configurations {
 }
 
 version = "0.1.1"
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 dependencies {
     compile  "org.embulk:embulk-core:0.6.16"
