--- a/example.yml
+++ b/example.yml
@@ -33,5 +33,6 @@ filters:
       - {column: score, operator: ">", argument: 2000}
       - {column: score, operator: "<", argument: 6000}
       - {column: time,  operator: ==,  argument: "2015-07-13", format: "%Y-%m-%d"}
+      # - {column: missing, operator: "==", argument: 6000}
 out:
   type: stdout
