--- a/example/and.yml
+++ b/example/and.yml
@@ -7,7 +7,7 @@
 #     score: integer
 in:
   type: file
-  path_prefix: example/example.foo
+  path_prefix: example/example.csv
   parser:
     type: csv
     charset: UTF-8
