--- a/example/where.yml
+++ b/example/where.yml
@@ -19,6 +19,10 @@ in:
       - {name: score, type: double}
 filters:
   - type: row
-    where: (foo IS NULL AND bar = 'bar' AND score>2000 AND flag=false) OR (id=9)
+    where: |-
+      (time = TIMESTAMP '2015-07-13' AND
+      foo IS NULL AND
+      bar = 'bar' AND score>2000 AND
+      flag=false) OR (id=9)
 out:
   type: stdout
