Use joni to improve REGEXP performance

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     compile  "org.embulk:embulk-core:0.8.+"
     provided "org.embulk:embulk-core:0.8.+"
 
+    compile  "org.jruby.joni:joni:2.1.11"
+    compile  "org.jruby.jcodings:jcodings:1.0.18"
+
     testCompile "junit:junit:4.+"
     testCompile "org.embulk:embulk-core:0.8.+:tests"
     testCompile "org.embulk:embulk-standards:0.8.+"
