Use old, but non-deprecated TimestampParser API to support embulk < 0.8.29

--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,8 @@ sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 dependencies {
-    compile  "org.embulk:embulk-core:0.8.29+"
-    provided "org.embulk:embulk-core:0.8.29+"
+    compile  "org.embulk:embulk-core:0.8.+"
+    provided "org.embulk:embulk-core:0.8.+"
 
     compile  "org.jruby.joni:joni:2.1.11"
     compile  "org.jruby.jcodings:jcodings:1.0.18"
