Use embulk v0.10 API/SPI libraries

--- a/build.gradle
+++ b/build.gradle
@@ -18,18 +18,30 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compileOnly  "org.embulk:embulk-core:0.9.23"
+    compileOnly "org.embulk:embulk-api:0.10.30"
+    compileOnly "org.embulk:embulk-spi:0.10.30"
+    compile("org.embulk:embulk-util-config:0.2.1") {
+        // They conflict with embulk-core. They are once excluded here,
+        // and added explicitly with versions exactly the same with embulk-core:0.10.19.
+        exclude group: "com.fasterxml.jackson.core", module: "jackson-annotations"
+        exclude group: "com.fasterxml.jackson.core", module: "jackson-core"
+        exclude group: "com.fasterxml.jackson.core", module: "jackson-databind"
+        exclude group: "com.fasterxml.jackson.datatype", module: "jackson-datatype-jdk8"
+        exclude group: "javax.validation", module: "validation-api"
+    }
+    compile "org.embulk:embulk-util-timestamp:0.2.1"
+    compile "org.embulk:embulk-util-text:0.1.1"
 
-    compile  "org.jruby.joni:joni:2.1.11"
-    compile  "org.jruby.jcodings:jcodings:1.0.18"
+    compile  "org.jruby.joni:joni:2.1.41"
+    compile  "org.jruby.jcodings:jcodings:1.0.55"
 
     testCompile "junit:junit:4.+"
-    testCompile  "org.embulk:embulk-core:0.9.23:tests"
-    testCompile  "org.embulk:embulk-standards:0.9.23"
-    // TODO: Remove them.
-    // These `testCompile` are a tentative workaround. It will be covered in Embulk core's testing mechanism.
-    testCompile "org.embulk:embulk-deps-buffer:0.9.23"
-    testCompile "org.embulk:embulk-deps-config:0.9.23"
+    testCompile "org.embulk:embulk-api:0.10.30"
+    testCompile "org.embulk:embulk-spi:0.10.30"
+    testCompile "org.embulk:embulk-core:0.10.30"
+    testCompile "org.embulk:embulk-deps:0.10.30"
+    testCompile "org.embulk:embulk-core:0.10.30"
+    testCompile  "org.embulk:embulk-core:0.10.30:tests"
 }
 
 checkstyle {
