--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,10 @@ dependencies {
     }
     compile "org.embulk:embulk-util-timestamp:0.2.1"
     compile "org.embulk:embulk-util-text:0.1.1"
+    compile "org.embulk:embulk-util-timestamp:0.2.1"
+    compile('org.embulk:embulk-util-json:0.1.0') {
+        exclude group: "org.msgpack", module: "msgpack-core"
+    }
 
     compile  "org.jruby.joni:joni:2.1.41"
     compile  "org.jruby.jcodings:jcodings:1.0.55"
